# Webstone

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: agent.py  config.py  schemas.py
docker/: Dockerfile  Dockerfile.dev
examples/coding_agent/: README.md  main.py  structured_agent.py  tools.py
src/agentic/agents/: orchestrator.py
src/agentic/observability/: tracing.py
src/agentic/prompts/: orchestrator.py
src/orchestration/agents/: base.py
src/orchestration/context/: base.py
src/orchestration/mocks/: observability.py
src/orchestration/models/: base.py
src/orchestration/observability/: base.py  callbacks.py  console.py  system.py
src/orchestration/tools/: base.py
src/transport/cmd/: main.go
src/transport/internal/server/: handlers.go  server.go
src/webstone/agents/evaluator/: __init__.py  agent.py
src/webstone/agents/memory/: __init__.py
src/webstone/agents/planner/: __init__.py  agent.py
src/webstone/agents/reader/: __init__.py  prompts.py
src/webstone/agents/router/: __init__.py
src/webstone/config/: __init__.py
src/webstone/core/errors/: __init__.py  base.py
src/webstone/core/events/: base.py
src/webstone/core/models/: __init__.py
src/webstone/core/protocols/: __init__.py  agent.py
src/webstone/core/state/: base.py
src/webstone/graphs/: builder.py
src/webstone/graphs/edges/: __init__.py
src/webstone/graphs/workflows/: __init__.py  research.py
src/webstone/memory/: __init__.py
src/webstone/memory/graph_store/: __init__.py  store.py
src/webstone/memory/retrieval/: retriever.py
src/webstone/memory/vector_store/: __init__.py  store.py
src/webstone/observability/: __init__.py
src/webstone/observability/events/: __init__.py  bus.py
src/webstone/observability/metrics/: __init__.py  collector.py
src/webstone/observability/tracing/: __init__.py
src/webstone/runtime/: __init__.py
src/webstone/runtime/cancellation/: __init__.py
src/webstone/runtime/queues/: queue.py
src/webstone/runtime/retries/: __init__.py
src/webstone/runtime/scheduler/: __init__.py
src/webstone/services/api/: routes.py
src/webstone/services/telemetry/: __init__.py
src/webstone/services/websocket/: __init__.py
tests/: conftest.py
tests/integration/: test_graph_execution.py
tests/unit/: test_agents.py  test_callbacks.py  test_context.py  test_models.py  test_observability.py  test_tools.py
tests/unit/test_agents/: test_evaluator.py  test_router.py
tests/unit/test_api/: test_routes.py
tests/unit/test_core/: test_events.py  test_state.py
tests/unit/test_memory/: test_graph_store.py
tests/unit/test_observability/: test_event_bus.py
tests/unit/test_runtime/: test_cancellation.py  test_checkpoints.py  test_queue.py  test_retries.py
vibecode-slop/webstone/: __init__.py
vibecode-slop/webstone/agents/: __init__.py  base.py
vibecode-slop/webstone/agents/evaluator/: prompts.py
vibecode-slop/webstone/agents/memory/: agent.py
vibecode-slop/webstone/agents/planner/: prompts.py
vibecode-slop/webstone/config/: settings.py
vibecode-slop/webstone/core/: __init__.py
vibecode-slop/webstone/graphs/: __init__.py
vibecode-slop/webstone/services/: __init__.py
(+20 files in other folders)
