[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webstone"
version = "0.1.0"
description = "A production-grade agentic research runtime for large-scale multi-agent orchestration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["agents", "llm", "research", "orchestration", "langgraph"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM & orchestration
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "structlog>=24.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=1.1.365",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]
redis = [
    "redis>=5.0.0",
]
tui = [
    "textual>=0.60.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
]
vector = [
    "qdrant-client>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "N",   # pep8-naming
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # dynamically typed expressions
    "B008",   # do not perform function call in defaults (needed for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["orchestration"]

# --- Pyright ---
[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
extraPaths = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src/orchestration"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
